# hello_wordle

./: .gitignore  CMakeLists.txt  update_wordle_log.bat
include/: before_i_played_wordle.txt  previous_answers.txt  print_buckets.h  wordle_defs.h  wordle_es.txt  wordle_es_guesses_raw_diccionario.txt  wordle_inputs.h  wordle_word_suggester.h  words.txt
nerdle/: make_nerdle_solutions.py  nerdle_templates.txt  regex_helps.txt  solutions.txt
nerdle/reference/: counts.txt  nerdle_templates.txt  solutions_v0_different_sorting.txt  solutions_v1_parsing.xlsx  top_1000ish_solutions.txt  top_20_solutions_plus_character_count.txt
reference/: answers_words_remaining_sorted.csv  guesses_words_remaining_sorted.csv  how_many_words_remain.xlsx  parse.json  parse_no_history.json  slate.json  sorted_words_remaining.xlsx
source/: print_buckets.cpp  todos.md  wordle_inputs.cpp  wordle_word_suggester.cpp
utils/: hello_wordle.bat  hello_wordle_4.bat  play_hello_wordle.bat  play_hello_wordle_4.bat
